# quant-ML-projects

./: README.md
ML-based-signal-generator/: README.md
backtestkit/: .gitignore  README.md  pyproject.toml  run_backtest.py
backtestkit/backtester/: engine.py  execution_modes.py  metrics.py  portfolio.py  sl_tp.py  visualization.py
backtestkit/common/: data_loader.py  models.py
backtestkit/context/: plan.md  plan_explained.md  spec.md  tests.md  tests_explained.md
backtestkit/strategies/: base_strategy.py  ma_crossover.py  signals.py
backtestkit/summaries/: changelog.md  changesToEquityCalculationAfterPhase4.md  changesToSignalLogicAfterPhase1.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
backtestkit/tests/: test_data_loader.py  test_engine.py  test_execution_modes.py  test_portfolio.py  test_sl_tp.py  test_strategy.py
backtestkit/tests/manual/: manualtest_MACrossover_sl_tp.py  manualtest_data_loader.py  manualtest_portfolio.py
